src/style.css
:root {
  font-family: "Arial";
  line-height: 1.5;
  font-weight: 400;

  scroll-behavior: smooth;
  overflow-x: hidden;
  overscroll-behavior: none;

  background-color: #ffffff;

  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  padding: 0;
  min-width: 320px;
  min-height: 100%;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
  color: #00000092;
}

#app {
  margin: 0 auto;
  text-align: center;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
}

